FIX: Decrease height of the calendar scroller. (#709)
When a calendar has enough entries that it needs to scroll within its container, it can't quite scroll far enough, causing the last row to be slightly cut off.

This fix tweaks the size of the scroll container to ensure the last row is fully visible.

--- a/assets/stylesheets/common/discourse-calendar.scss
+++ b/assets/stylesheets/common/discourse-calendar.scss
@@ -33,7 +33,7 @@
     overflow: hidden;
 
     .fc-scroller {
-      height: 575px !important;
+      height: 560px !important;
       padding-bottom: 5px;
     }
 
